--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
         <th>Annual Salary</th>
         <th></th>
       </tr>
+      <tr>
+        <th>Jen</th>
+        <th>Barber</th>
+        <th>4521</th>
+        <th>Team Lead</th>
+        <th>$80,000</th>
+        <th><button class="deleteButton">Delete</button></th>
+      </tr>
+      <tr>
+        <th>Maurice</th>
+        <th>Moss</th>
+        <th>8724</th>
+        <th>Support Team</th>
+        <th>$58,000</th>
+        <th><button class="deleteButton">Delete</button></th>
+      </tr>
+      <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
     </table>
   </body>
 </html>
