started to have the input fields do an input on submit

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="jquery-3.6.0.min"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="javascript.js"></script>
     <title>Salary Calculator</title>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="javascript.js"></script>
   </head>
-
   <body>
     <h1>SALARY CALCULATOR</h1>
     <h3>Add Employee</h3>
