--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input id="annualSalary" type="text" placeholder="Annual Salary" />
     <button id="submitButton">Submit Button</button>
     <h3>Employees</h3>
-    <table>
+    <table class="salaryCalculatorTable">
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
