got the amount to add and round to cents

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
       </tr>
       <tbody id="inputFieldTable">
         <tr>
-          <th>Jen</th>
-          <th>Barber</th>
-          <th>4521</th>
-          <th>Team Lead</th>
-          <th>$80,000</th>
-          <th><button class="deleteButton">Delete</button></th>
+          <td>Jen</td>
+          <td>Barber</td>
+          <td>4521</td>
+          <td>Team Lead</td>
+          <td>$80,000</td>
+          <td><button class="deleteButton">Delete</button></td>
         </tr>
         <tr>
-          <th>Maurice</th>
-          <th>Moss</th>
-          <th>8724</th>
-          <th>Support Team</th>
-          <th>$58,000</th>
-          <th><button class="deleteButton">Delete</button></th>
+          <td>Maurice</td>
+          <td>Moss</td>
+          <td>8724</td>
+          <td>Support Team</td>
+          <td>$58,000</td>
+          <td><button class="deleteButton">Delete</button></td>
         </tr>
         <tr>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
       </tbody>
     </table>
-    <h4 class="totalMath">Total Equals:</h4>
+    <h4>Total Equals:<span id="totalMath"></span></h4>
   </body>
 </html>
