trying to make the row red

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         </tr>
       </tbody>
     </table>
-    <h4>Total Equals:<span id="totalMath"></span></h4>
+    <h4>Total Monthly:<span id="totalMath"></span></h4>
   </body>
 </html>
